# SmlMqttProcessor

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile.target35  Dockerfile.test  Pipfile  README.html  README.md  config.dev.ini  config.template.ini  generate_d0_d1.py  main.py  pyproject.toml  requirements.freeze  requirements.txt  run-check.sh  run-pytest-coverage.sh  sml_server_arm  smlmqttprocessor.py  smltextmqttprocessor.py  test_smltextmqttprocessor.py  test_smltextmqttprocessor_libsml.py  tox.ini
.github/workflows/: python-app.yml
attic/: README.md  smlmqttprocessor.py
doc/: SML-Paket-Beschreibung.txt
doc/IR Sensor Problems/: README.md
example_data/: README.md  sml.txt
scripts/: README.md
scripts/docker-mosquitto/: README.md  mosquitto.conf  publish-examples.sh  run.sh  subscribe.sh  users.txt
scripts/example-data-sender/: README.html  README.md  example_data_sender.py
scripts/systemd/: smartmeterdaily.service  smltextmqttprocessor.service
sml_server_time/: Makefile  README.md  build.sh  sml_server_time  sml_server_time.c  unit.h
smlmqttprocessor/: __init__.py  __main__.py  generate_d0_d1.py  mqtt.py  smltextmqttprocessor.py
smlmqttprocessor/utils/: message_utils.py  mylogging.py
systemd/: smltextmqttprocessor.service
test/: Dockerfile  EMH_eHZ-IW8E2AWL0EK2P.txt  ISKRA_MT175_eHZ.txt  ISKRA_MT691_eHZ-MS2020.txt  README.md  test_smltextmqttprocessor.py  test_smltextmqttprocessor_libsml.py
test/testdata/: EMH_eHZ-HW8E2AWL0EK2P.txt  ISKRA_MT691_eHZ-MS2020.hex
tests/: __init__.py  conftest.py  test_generate_d0_d1.py  test_generate_d0_d1_config.py  test_generate_d0_d1_dailyenergymonitor.py  test_mqtt.py  test_smltextmqttprocessor.py  test_smltextmqttprocessor_emh.py  test_smltextmqttprocessor_iskra.py  test_smltextmqttprocessor_libsml.py
tests/testdata/: EMH_eHZ-GW8E2A500AK2.txt
tests/utils/: __init__.py  test_message_utils.py  test_mylogging.py
